# xbridge

./: .gitignore  Cargo.toml  README.md  xbridge-detectable-list.json.sha256
.github/: copilot-instructions.md
.github/workflows/: release.yml  update-detectable-list.yml
src/: config.rs  log.rs  main.rs  shared.rs
src/bridge/: mod.rs  path_resolver.rs
src/discovery/: list_sync.rs  mod.rs  models.rs  process_scan.rs
src/gateway/: discord.rs  frame.rs  mod.rs  pipe.rs
src/service/: host.rs  installer.rs  mod.rs
