[package]
name = "xbridge"
version = "0.2.0"
edition = "2021"

[dependencies]
tokio = { version = "1", default-features = false, features = [
    "rt-multi-thread", "net", "io-util", "macros", "time", "sync",
] }
serde = { version = "1", default-features = false, features = ["derive"] }
serde_json = { version = "1", default-features = false, features = ["std"] }
ureq = { version = "2", default-features = false, features = ["tls"] }
sha2 = { version = "0.10", default-features = false }
socket2 = "0.5"
anyhow = { version = "1", default-features = false, features = ["std"] }

[target.'cfg(windows)'.dependencies]
windows-service = "0.7"
windows-sys = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_SystemInformation",
    "Win32_System_Registry",
    "Win32_Storage_FileSystem",
] }

[profile.release]
opt-level = "z"
strip = true
lto = "fat"
codegen-units = 1
panic = "abort"
